Added example dir

--- a/src/styles/components/_annotator.scss
+++ b/src/styles/components/_annotator.scss
@@ -113,6 +113,10 @@
                 }
             }
 
+            &.js-facebook-share {
+                display: none;
+            }
+
             &.note-input {
 
                 padding: 10px;
