Major updates - better serialization/deserialization

--- a/src/styles/config/_variables.scss
+++ b/src/styles/config/_variables.scss
@@ -1,9 +1,12 @@
-$background: #E5E5E5;
+$background: #f1f1f1;
 $lightBackground: #FFFFFF;
+
+$headerBackground: #607D8B;
 $primary: #4d90fe;
 $selection: rgb(186, 186, 255);
 
 $white: #ffffff;
+$black: #000000;
 $annotator-bg: #ffffff;
 $annotator-dark-border: darken(#eee, 20%);
 $annotator-light-border: #eee;
