--- a/src/styles/pages/_layout.scss
+++ b/src/styles/pages/_layout.scss
@@ -1,6 +1,59 @@
+/* http://meyerweb.com/eric/tools/css/reset/ 
+   v2.0 | 20110126
+   License: none (public domain)
+*/
+html, body, div, span, applet, object, iframe,
+h1, h2, h3, h4, h5, h6, p, blockquote, pre,
+a, abbr, acronym, address, big, cite, code,
+del, dfn, em, img, ins, kbd, q, s, samp,
+small, strike, strong, sub, sup, tt, var,
+b, u, i, center,
+dl, dt, dd, ol, ul, li,
+fieldset, form, label, legend,
+table, caption, tbody, tfoot, thead, tr, th, td,
+article, aside, canvas, details, embed, 
+figure, figcaption, footer, header, hgroup, 
+menu, nav, output, ruby, section, summary,
+time, mark, audio, video {
+    margin: 0;
+    padding: 0;
+    border: 0;
+    font-size: 100%;
+    font: inherit;
+    vertical-align: baseline;
+}
+/* HTML5 display-role reset for older browsers */
+article, aside, details, figcaption, figure, 
+footer, header, hgroup, menu, nav, section {
+    display: block;
+}
+body {
+    line-height: 1;
+}
+ol, ul {
+    list-style: none;
+}
+blockquote, q {
+    quotes: none;
+}
+blockquote:before, blockquote:after,
+q:before, q:after {
+    content: '';
+    content: none;
+}
+table {
+    border-collapse: collapse;
+    border-spacing: 0;
+}
+
+
+
+/*=====================================
+=            CUSTOM STYLES            =
+=====================================*/
 body {
     background: $background;
-    font: 16/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
+    font: 16px/1.5 Helvetica, Arial, sans-serif;
 }
 
 .container {
@@ -10,33 +63,94 @@ body {
     margin: 0 auto;
 }
 
-#book {
-    max-width: 70%;
-    margin: 5% auto;
-    padding: 20px;
-    box-sizing: border-box;
-    background: $lightBackground;
-    box-shadow: 0 2px 4px rgba(0,0,0,0.1);
-    position: relative;
-    float: left;
+h1, h2, h3, h4, h5, h6, strong {
+    font-weight: 700;
 }
 
-#cards {
-    width: 25%;
-    padding: 20px;
-    margin: 5% 0;
-    float: left;
-    box-sizing: border-box;
+h1 {
+    font-size: 36px;
+}
 
-    .card {
-        background: #fff;
-        background: rgba(255, 255, 255, 0.6);
-        padding: 10px;
-        margin: 10px;
+h2 {
+    font-size: 28px;
+}
 
-        h5 {
+h3 {
+    font-size: 22px;
+}
+
+h4 {
+    font-size: 18px;
+}
+
+h5 {
+    font-size: 16px;
+}
+
+h6 {
+    font-size: 14px;
+}
+
+h1, h2, h3, h4, h5, h6, p {
+    margin: 10px 0;
+}
+
+ul, ol {
+    margin-left: 20px;
+}
+
+ul {
+    list-style: disc;
+}
+
+.content {
+    margin: 20px auto;
+    background: $lightBackground;
+    border: 1px solid darken($lightBackground, 10%);
+
+    #book {
+        margin: 0 auto;
+        padding: 20px;
+        box-sizing: border-box;
+        position: relative;
+    }
+
+    .header {
+        background: $headerBackground;
+        padding: 20px;
+        box-shadow: 0 2px 4px rgba(0,0,0,0.24);
+        color: $white;
+        text-shadow: 0 1px 1px rgba($black, 0.12);
+        h1 {
             margin: 0;
             padding: 0;
         }
+        p {
+            margin: 0;
+            padding: 0;
+            color: lighten($headerBackground, 30%);
+        }
     }
 }
+
+footer.main {
+    text-align: center;
+    margin: 20px auto;
+    a {
+        color: $headerBackground;
+        text-decoration: none;
+        text-shadow: 0 0 3px transparent;
+        transition: color 0.2s ease-in, text-shadow 0.2s ease-in;
+        &:hover {
+            color: $primary;
+            text-shadow: 0 0 3px rgba($primary, 0.2);
+        }
+    }
+}
+
+
+
+/*=====  End of CUSTOM STYLES  ======*/
+
+
+
